# agentic_rag

./: AGENTIC_RAG_REVIEW.md  README.md  pyproject.toml  requirements.txt  sample.env
app/: main.py
app/agent/: langgraph_agent.py  prompt.py  rag_agent.py
app/api/: routes.py
app/config/: settings.py
app/ingestion/: chunker.py  embedder.py  loader.py  pdf_loader.py
app/llm/: groq_client.py
app/llm_tools/: llm_tools.py
app/mcp/: server.py  tools.py
app/retriever/: retriever.py
app/tools/: web_search.py
app/utils/: logger.py
app/vectorstore/: pinecone_client.py
tests/: conftest.py  test_api_query.py  test_rag_agent.py  test_retriever.py
